feature: login and autentication

--- a/arquivorecurso.qrc
+++ b/arquivorecurso.qrc
@@ -8,5 +8,6 @@
         <file>icons/icons8-serviços-100 (1).png</file>
         <file>icons/icons8-adicionar-usuário-masculino-filled-100.png</file>
         <file>icons/icons8-senha-100 (1).png</file>
+        <file>icons/icons8-usuário-100.png</file>
     </qresource>
 </RCC>
