features and fixes: showing people in the hotel correctly, fixing and changing the way LDE works, fixing the passwords lines and making the login in every screen works correctly

--- a/arquivorecurso.qrc
+++ b/arquivorecurso.qrc
@@ -9,5 +9,6 @@
         <file>icons/icons8-adicionar-usuário-masculino-filled-100.png</file>
         <file>icons/icons8-senha-100 (1).png</file>
         <file>icons/icons8-usuário-100.png</file>
+        <file>icons/icons8-mais-500.png</file>
     </qresource>
 </RCC>
